--- a/app/page.module.css
+++ b/app/page.module.css
@@ -6,16 +6,51 @@
     height: 100vh;
 }
 
+.betContainer {
+    display: flex;
+    position: relative;
+    margin-top: 50px;
+}
+
+.input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid var(--orange);
+    border-radius: 5px;
+    font-size: 14px;
+    font-family: 'Poppins';
+    color: var(--orange);
+}
+
+.input:focus {
+    border: 1px solid var(--orange);
+    outline: none;
+}
+
 .btnPlay {
-    padding: 25px 50px;
+    /* padding: 25px 50px; */
     background-color: var(--red);
     color: var(--beige);
     font-size: 16px;
     border: none;
-    margin-top: 50px;
     cursor: pointer;
+
+    position: absolute;
+    right: 0;
+    top: 0;
+
+    height: 100%;
+    padding: 0 20px;
+
+    border-radius: 0 5px 5px 0;
 }
 
 .resultIcons {
     font-size: 106px;
+}
+
+.message {
+    font-size: 12px;
+    color: var(--red);
+    margin-top: 8px;
 }
