--- a/app/page.module.css
+++ b/app/page.module.css
@@ -54,3 +54,11 @@
     color: var(--red);
     margin-top: 8px;
 }
+
+
+@media screen and (max-width: 600px) {
+    .resultIcons {
+        font-size: 68px;
+    }
+
+}
