feat(modalwinner) raissa imagem winner

--- a/app/components/ModalWinner/modalwinner.module.css
+++ b/app/components/ModalWinner/modalwinner.module.css
@@ -42,3 +42,12 @@
     font-weight: 700;
 }
 
+.imageWin {
+    width: 100%;
+    position: relative;
+}
+
+.imageWin img {
+    width: 100%;
+    height: auto;
+}
