--- a/app/components/Machine/machine.module.css
+++ b/app/components/Machine/machine.module.css
@@ -19,14 +19,30 @@
 /* 141px cada imagem */
 .slotContent {
     position: absolute;
-    top: 0;
+    top:30px;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.icon  {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 600px) {
     .slot {
         width: 100px;
+        height: 60px;
+    }
+
+    .slotContent {
+        top: 10px;
+    }
+
+    .icon  {
+        width: 100%;
         height: 70px;
+        object-fit: cover;
     }
 }
