--- a/app/components/ModalWinner/modalwinner.module.css
+++ b/app/components/ModalWinner/modalwinner.module.css
@@ -1,4 +1,4 @@
-/* .container {
+.overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -8,11 +8,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.3);
-} */
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.closeModal {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    font-size: 26px;
+    color: var(--orange);
+}
 
 .container {
     position: relative;
+
+    background-color: var(--beige);
 
     max-width: 300px;
     width: 100%;
@@ -25,6 +38,8 @@
     align-items: center;
     flex-direction: column;
     gap: 4px;
+
+    margin-bottom: 60px;
 }
 
 .title {
@@ -32,6 +47,7 @@
     color: var(--orange);
     font-family: 'Poppins';
     text-align: center;
+    margin-top: 22px;
 }
 
 .value {
