--- a/app/components/Admin/admin.module.css
+++ b/app/components/Admin/admin.module.css
@@ -30,3 +30,37 @@
     font-size: 14px;
     color: #333;
 }
+
+.chancesContainer {
+    color: var(--beige);
+    font-family: 'Poppins';
+    width: 100%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.labelChances {
+    font-size: 12px;
+    color: var(--beige);
+    font-family: 'Poppins';
+    margin-right: 8px;
+}
+
+.chances {
+    width: 50px;
+    text-align: center;
+}
+
+.homeAmountContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+ 
+}
+
+.homeAmount {
+    width: 50px;
+    text-align: center;
+}
